Added some missing basic get api calls
